# agentic-mr-platform

./: .gitignore  README.md  command.sh  demo_ideagenius.py  test_agent.py  test_deepseek.py
backend/: .env.example  ARCHITECTURE.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routes/: chat.py  export.py  extract.py  skills.py
backend/app/conversations/: store.py
backend/app/core/: claude.py  config.py
backend/app/skills/: loader.py  models.py  registry.py
backend/app/tools/: executor.py
backend/skills_data/: competitive_analysis.md  idea_genius.md  save_file.md  survey_bot.md  survey_chatbot.md  translation_bot.md
