[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[project]
name = "skills-platform"
version = "0.1.0"
description = "Skills-as-Markdown AI Platform for Market Research"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0",
    "uvicorn[standard]>=0.32.0",
    "anthropic>=0.40.0",
    "python-frontmatter>=1.1.0",
    "watchdog>=4.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.12",
    "python-dotenv>=1.0.1",
    "aiofiles>=24.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
